# indproj24-prof_kim_2024

./: README.md
001 Source Code/Universal_Robots_ROS2_Description/urdf/: ur.urdf.xacro
001 Source Code/topic_camera/topic_camera/: main.py  maybePotatos_detect.py  unet3.py
001 Source Code/unified_ur_move/: CMakeLists.txt  package.xml
001 Source Code/unified_ur_move/launch/: main_node.launch.py
001 Source Code/unified_ur_move/src/: main_node.cpp
